--- a/src/Components/Navbar/navbar.css
+++ b/src/Components/Navbar/navbar.css
@@ -1,3 +1,32 @@
+.cart-link {
+  position: relative;
+  display: inline-block;
+}
+
+.cart-badge {
+  position: absolute;
+  top: -8px;
+  right: -8px;
+  background-color: black;
+  color: white;
+  border-radius: 50%;
+  padding: 4px 8px;
+  font-size: 12px;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-width: 20px;
+  height: 20px;
+}
+
+
+
+
+
+
+
+
 .navbar-brand{
   width: 140px;
   height: 110px;
@@ -70,23 +99,3 @@
     margin-right: -31px;
   }
 }
-
-/*
-  .navbar-toggler {
-    position: absolute;
-    top: 21px;
-    font-size: 1.5rem;
-    line-height: 1;
-    transition: box-shadow .15s ease-in-out;
-}
-.navbar-toggler:focus {
-    text-decoration: none !important;
-    outline: 0 !important;
-    box-shadow: none !important;
-}
-.navbar-light .navbar-toggler {
-    color: black !important;
-    border: none !important;
-    border-color: none !important; 
-}
-      */
