--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,8 @@
 }
 body{
   padding: 0px; margin: 0px;
+  background-color: black;
+  color: white;
   box-sizing: border-box;
   overflow-x: hidden ;
 }
