--- a/src/Components/Benefits/benefit.css
+++ b/src/Components/Benefits/benefit.css
@@ -4,6 +4,10 @@
     flex-direction: column;
     align-items: center !important;
     gap: 10px;
+color: black;
+}
+.benefit_box p{
+    color: black !important;
 }
 /* .benefit_box:hover{
     cursor: pointer;
