--- a/src/Components/Home/collection.css
+++ b/src/Components/Home/collection.css
@@ -1,20 +1,23 @@
 .collection_card{
     height: 130px;
     width: 130px;
-    border-radius: 100%;
-    border: 1px solid rgba(0,0,0,0.5) !important; 
+    /* border-radius: 100%; */
     overflow: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
 }
+.collection_card:hover{
+    box-shadow: 0 0px 2px 1px white !important;
+    transition: all linear 0.3s;
 
-.collection_image {
+}
+.collection_card .collection_image {
     width: 70%;
     height: 70%;
 }
 .collection_card:hover .collection_image {
-    transform: scale(1.08);
+    transform: scale(1.06);
     transition: all linear 0.7s;
 }
 
