--- a/src/Components/SinglePage/single.css
+++ b/src/Components/SinglePage/single.css
@@ -137,7 +137,7 @@
 
 .s_btn button {
     font-weight: 500;
-    color: white;
+    color: black;
     width: fit-content;
     height: fit-content;
     padding: 10px 20px;
@@ -257,7 +257,7 @@
     padding: 0px 5px;
     align-items: center !important;
     /* border: 1px solid lightgray; */
-    border: 1px solid lightgray;
+    border: 1px solid white;
     border-radius: 50px;
 }
 
