--- a/src/Components/UserPanel/userPanel.css
+++ b/src/Components/UserPanel/userPanel.css
@@ -15,6 +15,8 @@
     border-radius: 100%;
 }
 .profile_btn{
+    height: fit-content;
+    width: fit-content;
     border: none !important;
     outline:  none !important;
 }
