--- a/src/Components/Home/card.css
+++ b/src/Components/Home/card.css
@@ -30,13 +30,29 @@
     height: 270px;
     border-radius: 20px;
     box-shadow: 10px 10ox 10px #F2F0F1;
+    position: relative;
+  overflow: hidden;
     display: flex;
     justify-content: center !important;
     align-items: center !important;
 }
+
+.card_img .overlay {
+    position: absolute;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    transition: 0.3s ease;
+  }
+  
+  .card_img:hover .overlay {
+    left: 0;
+  }
+  
 .card:hover .card_img img {
     cursor: pointer;
-    transform: scale(1.02);
+    /* transform: scale(1.02); */
     transition: all linear 1.5s;
 }
 
