--- a/src/Components/Contact/contact.css
+++ b/src/Components/Contact/contact.css
@@ -18,7 +18,8 @@
   .contact-content {
     position: relative;
     z-index: 1;
-    background-color: rgba(255, 255, 255, 0.8);
+background-color: rgba(0,0,0, 0.4);
+    /* background-color: rgba(255, 255, 255, 0.8); */
     padding: 5px;
     border-radius: 10px;
     max-width: fit-content;
