--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
   font-family: "Roboto", sans-serif !important;
   font-style: normal !important;
 }
+
 body{
   padding: 0px; margin: 0px;
   background-color: black;
@@ -11,6 +12,7 @@ body{
   box-sizing: border-box;
   overflow-x: hidden ;
 }
+
 .whatsapp-button {
   position: fixed;
   bottom: 20px;
@@ -42,11 +44,11 @@ a{
 }
 .error{
     font-family: 'Montserrat', sans-serif;
-    color: red;
+    color: black;
     font-weight: 600;
     font-size: 14px;
     letter-spacing: 0.1rem;
     margin-top: 0.5rem;
     padding: 5px 10px;
-    background-color: rgb(255, 0, 0, 0.2);
+    background-color: white;
   }
