--- a/src/Components/Home/card.css
+++ b/src/Components/Home/card.css
@@ -54,6 +54,7 @@
 .card:hover {
     box-shadow: 0 0px 2px 1px white !important;
     transition: all linear 0.3s;
+    transform: none !important;
     cursor: pointer;
 }
 
