--- a/src/Components/Products/products.css
+++ b/src/Components/Products/products.css
@@ -19,7 +19,7 @@
     position: absolute !important;
     position: fixed !important;
     display: block;
-    height: 95vh;
+    height: 100%;
     overflow-y: scroll;
     width: 300px;
     top: 0px;
