--- a/src/Components/Faq/faq.css
+++ b/src/Components/Faq/faq.css
@@ -6,7 +6,7 @@
 .faq_btn{
     text-transform: uppercase;
     color: #FFFF;
-    background-color: rgba(60, 114, 252, 0.9);
+    /* background-color: rgba(60, 114, 252, 0.9); */
     font-size: 12px;
     font-weight: 500;
     padding: 15px 25px;
@@ -17,7 +17,6 @@
 .faq_btn:hover{
   color: #FFFF;
   box-shadow: 0px 0px 7px rgb(60, 114, 252);
-
 }
 
 .faq_head_detail{
@@ -34,7 +33,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: rgb(60, 114, 252);
+    /* background-color: rgb(60, 114, 252); */
 }
 .faq_box_number{
         font-size: 40px;
