--- a/src/Components/Home/card.css
+++ b/src/Components/Home/card.css
@@ -59,8 +59,8 @@
 }
 
 .card img {
-    width: 100% !important;
-    max-height: 100% !important;
+    width: 100% ;
+    max-height: 100% ;
 }
 
 .card_title {
